# my-openenv

./: Dockerfile  README.md  email_data.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
