[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.1",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"